src/objects/Participation_Application_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>ACLI_Application_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related ACLI Application Requirement</description>
        <label>ACLI Application Requirement</label>
        <referenceTo>Participation_Application_Requirement__c</referenceTo>
        <relationshipLabel>Participation Application Requirements</relationshipLabel>
        <relationshipName>ACLI_Application_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACLI_Codes__c</fullName>
        <description>Type of ACLI Code related to Requirement</description>
        <label>ACLI Codes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACLI_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLI_Requirement_Fields__c</fullName>
        <description>Fields related to the Requirement</description>
        <label>Requirement Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAO_Domestic__c</fullName>
                </value>
                <value>
                    <fullName>AAO_International__c</fullName>
                </value>
                <value>
                    <fullName>Accounting_Code_Airline_Prefix_Purpose__c</fullName>
                </value>
                <value>
                    <fullName>Add_or_Delete_an_Airport__c</fullName>
                </value>
                <value>
                    <fullName>Airline_has_reciprocal_2_W_agreement__c</fullName>
                </value>
                <value>
                    <fullName>Airline_have_telecom_with_SITA_or_ARINC__c</fullName>
                </value>
                <value>
                    <fullName>Reciprocal_Two_Way_Airline_Name__c</fullName>
                </value>
                <value>
                    <fullName>AOC_Bus_Company__c</fullName>
                </value>
                <value>
                    <fullName>AOC_country_of_issue__c</fullName>
                </value>
                <value>
                    <fullName>AOC_CRS__c</fullName>
                </value>
                <value>
                    <fullName>AOC_Expiry_Date__c</fullName>
                </value>
                <value>
                    <fullName>AOC_Ferry_Company__c</fullName>
                </value>
                <value>
                    <fullName>AOC_issue_date__c</fullName>
                </value>
                <value>
                    <fullName>AOC_Issuing_Authority_Name__c</fullName>
                </value>
                <value>
                    <fullName>AOC_Non_Scheduled_Cargo__c</fullName>
                </value>
                <value>
                    <fullName>AOC_Non_Scheduled_Passenger__c</fullName>
                </value>
                <value>
                    <fullName>AOC_Railway_Company__c</fullName>
                </value>
                <value>
                    <fullName>AOC_Scheduled_Cargo__c</fullName>
                </value>
                <value>
                    <fullName>AOC_Scheduled_Passenger__c</fullName>
                </value>
                <value>
                    <fullName>AOC_ULD__c</fullName>
                </value>
                <value>
                    <fullName>ARINC__c</fullName>
                </value>
                <value>
                    <fullName>Authorization_to_provide_transportation__c</fullName>
                </value>
                <value>
                    <fullName>Authorized_areas_of_operations__c</fullName>
                </value>
                <value>
                    <fullName>Baggage_Reason_For_Use_1__c</fullName>
                </value>
                <value>
                    <fullName>Baggage_Reason_For_Use_2__c</fullName>
                </value>
                <value>
                    <fullName>Baggage_Reason_For_Use_3__c</fullName>
                </value>
                <value>
                    <fullName>Baggage_Reason_For_Use_4__c</fullName>
                </value>
                <value>
                    <fullName>Baggage_Reason_For_Use_5__c</fullName>
                </value>
                <value>
                    <fullName>Billing_City__c</fullName>
                </value>
                <value>
                    <fullName>Billing_Contact__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component_Key__c</fullName>
        <description>Component Key related to Requirement</description>
        <label>Component Key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISSP_AMC_AirOperatorCertificate</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Authorized_Areas_Operation</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_AreasOfRoutesAndOperations</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_PreviousIATACode</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_ICAOCode</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_SchedulesPublication</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_FleetInformation</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_PreferenceOfCode</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_TermsAndConditions</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_ULD</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Rail_Ferry_Or_Bus</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_CRS</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Intermodal_Agreement</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Upload_Files</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_BusRailwayFerry</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Metropolitan_Area</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_LocationAirportHeliportForm</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_LocationOfflinePoint</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_BreakdownOfShareholders</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Non_Scheduled</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Authorization_Transportation_Services</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_TrafficAgreement_Valid_IATA_Code</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Signed_Letter_CRS</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Passenger</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Cargo</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Reciprocal_Two_Way</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Freight_Forwarder</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_Account_Settlement_System_CASS</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_CertificateIncorporationRegistration</fullName>
                </value>
                <value>
                    <fullName>ISSP_AMC_CurrentStructureLocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <description>Display Order of Requirement</description>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>Type of Location related to the Requirement</description>
        <label>Location Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Heliport</fullName>
                </value>
                <value>
                    <fullName>Railway Station</fullName>
                </value>
                <value>
                    <fullName>Bus Station</fullName>
                </value>
                <value>
                    <fullName>Ferry Port</fullName>
                </value>
                <value>
                    <fullName>Off-line Point</fullName>
                </value>
                <value>
                    <fullName>Metropolitan Area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NOTE_Custom_Label__c</fullName>
        <description>Insert label to be translated</description>
        <label>NOTE Custom Label</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement_Description__c</fullName>
        <description>Description of the Requirement</description>
        <label>Requirement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_Custom_Label__c</fullName>
        <description>Title Custom Label to be translated</description>
        <label>Title Custom Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Operation__c</fullName>
        <description>Type of Operation chosen by the portal user</description>
        <label>Type of Operation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled Passenger</fullName>
                </value>
                <value>
                    <fullName>Scheduled Cargo</fullName>
                </value>
                <value>
                    <fullName>Non-Scheduled Passenger</fullName>
                </value>
                <value>
                    <fullName>Non-Scheduled Cargo</fullName>
                </value>
                <value>
                    <fullName>Ferry Company</fullName>
                </value>
                <value>
                    <fullName>CRS</fullName>
                </value>
                <value>
                    <fullName>ULD</fullName>
                </value>
                <value>
                    <fullName>Bus Company</fullName>
                </value>
                <value>
                    <fullName>Railway Company</fullName>
                </value>
                <value>
                    <fullName>Baggage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Requirement__c</fullName>
        <description>Type of requirement to be fulfilled</description>
        <label>Type of Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>VF_Component</fullName>
                    <label>VF Component</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isToShow__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check if Requirement is supposed to show</description>
        <label>isToShow</label>
        <type>Checkbox</type>
    </fields>
    <label>Participation Application Requirement</label>
    <listViews>
        <fullName>Accounting_Prefix_Code_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Description__c</columns>
        <columns>ACLI_Codes__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Type_of_Operation__c</columns>
        <columns>ACLI_Requirement_Fields__c</columns>
        <columns>Type_of_Requirement__c</columns>
        <columns>Component_Key__c</columns>
        <columns>isToShow__c</columns>
        <columns>NOTE_Custom_Label__c</columns>
        <columns>Location_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACLI_Codes__c</field>
            <operation>equals</operation>
            <value>Accounting or Prefix Code</value>
        </filters>
        <label>Accounting &amp; Prefix Code Requirements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Description__c</columns>
        <columns>ACLI_Codes__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Type_of_Operation__c</columns>
        <columns>ACLI_Requirement_Fields__c</columns>
        <columns>Type_of_Requirement__c</columns>
        <columns>Component_Key__c</columns>
        <columns>isToShow__c</columns>
        <columns>NOTE_Custom_Label__c</columns>
        <columns>Location_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Baggage_Code_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Description__c</columns>
        <columns>ACLI_Codes__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Type_of_Operation__c</columns>
        <columns>ACLI_Requirement_Fields__c</columns>
        <columns>Type_of_Requirement__c</columns>
        <columns>Component_Key__c</columns>
        <columns>isToShow__c</columns>
        <columns>NOTE_Custom_Label__c</columns>
        <columns>Location_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACLI_Codes__c</field>
            <operation>equals</operation>
            <value>Baggage Code</value>
        </filters>
        <label>Baggage Code Requirements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Designator_Code_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Description__c</columns>
        <columns>ACLI_Codes__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Type_of_Operation__c</columns>
        <columns>Type_of_Requirement__c</columns>
        <columns>Component_Key__c</columns>
        <columns>ACLI_Requirement_Fields__c</columns>
        <columns>isToShow__c</columns>
        <columns>NOTE_Custom_Label__c</columns>
        <columns>Location_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACLI_Codes__c</field>
            <operation>equals</operation>
            <value>Designator Code</value>
        </filters>
        <label>Designator Code Requirements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Location_Code_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Description__c</columns>
        <columns>ACLI_Codes__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Type_of_Operation__c</columns>
        <columns>ACLI_Requirement_Fields__c</columns>
        <columns>Type_of_Requirement__c</columns>
        <columns>Component_Key__c</columns>
        <columns>isToShow__c</columns>
        <columns>NOTE_Custom_Label__c</columns>
        <columns>Location_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACLI_Codes__c</field>
            <operation>equals</operation>
            <value>Location Code</value>
        </filters>
        <label>Location Code Requirements</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PAR-{000000}</displayFormat>
        <label>Participation Application Requirement Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participation Application Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>